--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
+    "react-native-volume-manager": "^1.10.0",
     "react-player": "^2.16.0",
     "react-redux": "^8.1.2",
     "react-router": "^6.16.0",
