--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.20.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.5.0",
+    "cloudinary": "^2.4.0",
     "fast-average-color": "^9.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
