--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.5.0",
+    "bson": "^6.8.0",
     "cloudinary": "^2.4.0",
     "fast-average-color": "^9.4.0",
+    "mongodb": "^6.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
