--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@cloudinary/url-gen": "^1.20.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@google/generative-ai": "^0.17.1",
     "axios": "^1.5.0",
     "bson": "^6.8.0",
     "cloudinary": "^2.4.0",
