--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.5.0",
     "bson": "^6.8.0",
     "cloudinary": "^2.4.0",
+    "dotenv": "^16.4.5",
     "fast-average-color": "^9.4.0",
     "mongodb": "^6.8.0",
     "react": "^18.2.0",
