--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "fast-average-color": "^9.4.0",
     "mongodb": "^6.8.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-native-volume-manager": "^1.10.0",
