Add another API_KEY to .env

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_TEST_VAR="123"
 TEST_VAR2="1234"
-VITE_API_KEY="AIzaSyD6_dPEXi9GqT4WJ4FDa0Qme3uUzYOIwfU"
+YOUTUBE_API="AIzaSyD6_dPEXi9GqT4WJ4FDa0Qme3uUzYOIwfU"
+GEMINI_API="AIzaSyDvZP4kLVdM-zLNfIHZNgg_swlq2uoMElI"
