--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 VITE_TEST_VAR="123"
 TEST_VAR2="1234"
-YOUTUBE_API="AIzaSyD6_dPEXi9GqT4WJ4FDa0Qme3uUzYOIwfU"
-GEMINI_API="AIzaSyDvZP4kLVdM-zLNfIHZNgg_swlq2uoMElI"
+VITE_YOUTUBE_API="AIzaSyD6_dPEXi9GqT4WJ4FDa0Qme3uUzYOIwfU"
+VITE_GEMINI_API="AIzaSyDvZP4kLVdM-zLNfIHZNgg_swlq2uoMElI"
