--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-redux": "^8.1.2",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.26.1",
+    "react-swipeable": "^7.0.1",
     "redux": "^4.2.1",
     "socket.io-client": "^4.7.2"
   },
